# Advance_algorithms_240678

./: .gitignore  PROJECT_PLAN.md  README.md  pyproject.toml  run_all_checks.ps1
experiments/: task1_benchmark.py  task1_figures.py  task2_benchmark.py  task2_figures.py  task3_experiments.py  task3_figures.py  task4_experiments.py  task4_figures.py  task5_figures.py
experiments/benchmark_data/: task3_experiments.csv  task4_experiments.csv  task5_benchmarks.csv
experiments/benchmark_scripts/: task1_benchmark.py  task1_figures.py  task2_benchmark.py  task2_figures.py  task3_experiments.py  task3_figures.py  task4_experiments.py  task4_figures.py  task5_figures.py
experiments/data/: task1_benchmarks.csv  task2_benchmarks.csv
reports/: final_report.md  task1_analysis.md  task2_analysis.md  task3_analysis.md  task4_analysis.md  task5_analysis.md
scripts/: verify_artifacts.py
src/task1_structures/: __init__.py  avl.py  bst.py  city.py  hash_table.py  min_heap.py
src/task2_graphs/: __init__.py  bellman_ford.py  dijkstra.py  graph.py  prim.py
src/task3_strategies/: __init__.py  exam_timetabling.py  weighted_greedy.py  weighted_jobs.py
src/task4_heuristics/: __init__.py  bin_packing.py  exact.py  local_search.py
src/task5_concurrency/: __init__.py  benchmark.py  parallel_merge_sort.py
task5_concurrency/: run_benchmark.ps1  run_tests.ps1
tests/: __init__.py
tests/task1/: __init__.py  test_avl.py  test_benchmark_data.py  test_bst.py  test_city.py  test_hash_table.py  test_min_heap.py
tests/task2/: __init__.py  test_bellman_ford.py  test_benchmark_data.py  (+3 more)
(+16 files in other folders)
